--- a/src/app/components/user/user/user.component.html
+++ b/src/app/components/user/user/user.component.html
@@ -130,13 +130,13 @@
                             <li *ngIf="!isSelfProfile && isInCircle" class="badge badge-pill badge-warning pointer" (click)="removeFromCircle()">In Circle<i class="fa fa-star-o"></i></li>           
                             <!--<li *ngIf="!isSelfProfile && managedBy && managedBy.length > -1" class="vseparator"></li>-->
                             <li *ngIf="members && members.length > 0" class="badge badge-pill badge-success pointer" (click)="loadTemplate('upMember')">Members &nbsp;<span class="badge badge-light">{{members.length}}</span>                                    
-                            <li  class="badge badge-pill badge-success pointer" >
+                            <li *ngIf="isEditable" class="badge badge-pill badge-success pointer" >
                                 <span mat-icon-button class="circle-button" [matMenuTriggerFor]="menu" aria-label="Profile menu items">
                                     <mat-icon class="edit-profile-icon">more_horiz</mat-icon>
     
                                 </span>  
                               <mat-menu #menu="matMenu">
-                                <button *ngIf="isEditable && !isProfileInEditMode()"  (click)="editProfile()" mat-menu-item>
+                                <button *ngIf="!isProfileInEditMode()"  (click)="editProfile()" mat-menu-item>
                                   <span>Edit Profile</span>
                                 </button>
                                 <button *ngIf="isProfileInEditMode()" (click)="saveProfile()" mat-menu-item>
@@ -176,22 +176,24 @@
 
               </div>
             </div>
-            <div class="dashboard-avatar-text col-md-12" [ngClass]="{'empty-desc':!isEditDesc && (!userData.description || userData.description.length==0)}">
+            <div class="dashboard-avatar-text col-md-12">
                 <div class="bio-intro box" *ngIf="!isEditDesc && userData.description && userData.description.length>0">
                     <span  *ngIf="isProfileInEditMode()" class="edit-bio-intro edit" (click)="isEditDesc=true"><mat-icon>edit</mat-icon></span>
                     <p class="expclpse" [class.show]="showLessDescription">{{userData.description}}</p>
                     <span *ngIf="showDescriptionSlider" (click)="showLessDescription = !showLessDescription" class="showMore">{{ showLessDescription ? 'Show less': '... Show more' }}</span>
                 </div>
-                <div class="bio-intro box no-desc" *ngIf="!isEditDesc && (!userData.description || userData.description.length==0)">
-                         <span class="mat-edit-icon add-desc" (click)="isEditDesc=true">Add your description here <mat-icon>edit</mat-icon></span>
+
+                <div class="bio-intro box no-desc" *ngIf="isEditable && !isEditDesc && (!userData.description || userData.description.length==0)">
+                         <span *ngIf="isProfileInEditMode()" class="mat-edit-icon add-desc" (click)="isEditDesc=true">Add your description here <mat-icon>edit</mat-icon></span>
+                         <span *ngIf="!isProfileInEditMode()" class="mat-edit-icon add-desc">Add your description here</span>
                 </div>
 
                 <div class="bio-intro box" *ngIf="isEditDesc">
                     <span class="edit-bio-intro edit" (click)="isEditDesc=false"><mat-icon>done_outline</mat-icon></span>
                     <textarea class="form-control form-control-lg mb-3" rows="3" placeholder="Add your description here">{{userData.description}}</textarea>
                 </div>
-                
             </div>
+
           </div>
         </div>
     </div>
@@ -325,15 +327,26 @@
                                                      <div id="setingsSection" *ngIf="isUserLogged()" [ngbCollapse]="isSettingsCollapsed" class="widget stick-widget">
                                                      <form [formGroup]="settingsForm">
                                                           <ul class="followers">
-                                                                  <div class="form-row">
-                                                                      <div class="col form-group">
-                                                                        <label>Access Restriction</label>
-                                                                        <div class="custom-control custom-switch">
-                                                                          <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction" (change)="accessChange()">
-                                                                          <label class="custom-control-label" for="customSwitch1">Public[OFF] / Private[ON]</label>
-                                                                        </div>
-                                                                      </div>
-                                                                    </div>
+                                                            <label>Access Restriction</label>
+
+                                                            <div class="form-row">
+
+                                                                <div class="col form-group">
+                                                                    Public[OFF]
+                                                                </div>
+                                                            <!--max-width: fit-content;-->
+                                                                <div class="col form-group custom-control custom-switch">
+                                                                        
+                                                                            <input type="checkbox" class="custom-control-input" id="customSwitch1" formControlName="accessRestriction" (change)="accessChange()">
+                                                                            <label class="custom-control-label" for="customSwitch1">
+                                                                            </label>
+    
+                                                                </div>
+
+                                                                <div class="col form-group">                                                            
+                                                                    Private[ON]
+                                                                </div>
+                                                            </div>
                                                           </ul>
                                                       </form>    
                                                       </div>
