--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,66 +1,67 @@
 .active {
-    color: #028ece !important;
+  color: #028ece !important;
 }
-.custom-padding-top-overall{
-    padding-top: 50px;
+.custom-padding-top-overall {
+  padding-top: 50px;
 }
 body {
-    padding-top: 82px;
-    /* background: #edf2f6 !important; */
-    background: #fff !important;
+  padding-top: 82px;
+  /* background: #edf2f6 !important; */
+  background: #fff !important;
 }
-.nav-link, .text-center {
-    text-align: center;
+.nav-link,
+.text-center {
+  text-align: center;
 }
 
 a {
-    cursor: pointer;
+  cursor: pointer;
 }
-.search-field{
-    width: 40%;
-    margin-top: 1%;
+.search-field {
+  width: 40%;
+  margin-top: 1%;
 }
 
-.ng-autocomplete input{
-    /* width: 400px;
+.ng-autocomplete input {
+  /* width: 400px;
     display: block; */
-    width: 100%;
-    /* height: calc(1.5em + .75rem + 2px); */
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  width: 100%;
+  /* height: calc(1.5em + .75rem + 2px); */
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.createpage-option{
-    display: block;
+.createpage-option {
+  display: block;
 }
-.dropdown{
+.dropdown {
   margin: auto;
 }
 
 .mylogo {
-    height: 50px;
-    width: 205px;
-    background-size: 200px 23px;
-    background-image: url('../assets/images/gpx-logo-default-lg.png');
-    background-repeat: no-repeat;
-    background-position: center center;
+  height: 50px;
+  width: 205px;
+  background-size: 200px 23px;
+  background-image: url("../assets/images/gpx-logo-default-lg.png");
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .mylogoLg {
-    height: 50px;
-    width: 125px;
-    background-size: 100%;
-    background-image: url('../assets/images/logonew.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    margin: 0px 0px 0px 10px;
+  height: 50px;
+  width: 125px;
+  background-size: 100%;
+  background-image: url("../assets/images/logonew.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 0px 0px 0px 10px;
 }
 
 /*.searchbtnGroup {
@@ -78,132 +79,131 @@ a {
 }*/
 
 .simplelogo {
-    height: 40px;
-    width: 80px;
-    background-size: 100%;
-    background-image: url('../assets/images/logonew.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    margin-right: 0px;
+  height: 40px;
+  width: 80px;
+  background-size: 100%;
+  background-image: url("../assets/images/logonew.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin-right: 0px;
 }
 
 .navbar-expand-lg {
-    border-bottom: 1px solid #ccc;
-    background: #fff !important;
+  border-bottom: 1px solid #ccc;
+  background: #fff !important;
 }
 
 .container-fluid {
-    /*max-width: 1100px;*/
-    width: 100%;
-    overflow-x: hidden;
-    /* margin: 0 auto; */
+  /*max-width: 1100px;*/
+  width: 100%;
+  overflow-x: hidden;
+  /* margin: 0 auto; */
 }
 @media only screen and (max-width: 600px) {
-    .routlet .container-fluid {
+  .routlet .container-fluid {
     width: 90%;
     margin: 0 auto;
- /* margin-top: 30%; */
-
-    }
+    /* margin-top: 30%; */
+  }
 }
 
 .container-custom {
-    position: relative;
-    width: 75%;
-    margin: 0px auto;
+  position: relative;
+  width: 75%;
+  margin: 0px auto;
 }
 
 .ui-block {
-    background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid #e6ecf5;
-    margin-bottom: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #e6ecf5;
+  margin-bottom: 15px;
 }
 
 .post {
-    position: relative;
-    padding: 25px;
-    border-bottom: 1px solid #e6ecf5;
+  position: relative;
+  padding: 25px;
+  border-bottom: 1px solid #e6ecf5;
 }
 
 .card {
-    border: none !important;
+  border: none !important;
 }
 
 .card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    padding: 0 !important;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 0 !important;
 }
 
 .post__author {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .post__author img {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    overflow: hidden;
-    margin-right: 12px;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-right: 12px;
 }
 
 .avatar-profile img {
-    width: 35px;
-    height: 34px;
-    border-radius: 100%;
-    overflow: hidden;
-    margin-left: 12px;
+  width: 35px;
+  height: 34px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-left: 12px;
 }
 
 .inline-items > * {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .post .author-date a {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .post__author .more {
-    float: right;
-    font-size: 16px;
-    margin-right: 20px;
+  float: right;
+  font-size: 16px;
+  margin-right: 20px;
 }
 
 .more a {
-    color: #777;
+  color: #777;
 }
 
 button.btn.btn-light {
-    position: absolute;
-    background: transparent;
-    border: none;
-    height: 38px;
+  position: absolute;
+  background: transparent;
+  border: none;
+  height: 38px;
 }
 
 .myform-control {
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    text-indent: 22px;
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-indent: 22px;
 }
 
 .mybtn {
-    background: #b92b27 !important;
-    border-color: #b92b27 !important;
+  background: #b92b27 !important;
+  border-color: #b92b27 !important;
 }
 
 placeholder {
-    text-indent: 102;
+  text-indent: 102;
 }
 
 /*ul {
@@ -215,148 +215,145 @@ placeholder {
     border-top: 1px solid #e6ecf5;
 }*/
 .post-additional-info > * {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .left-ul li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .m-link a {
-    color: #333;
+  color: #333;
 }
 
 .m-link a:hover {
-    color: #333;
+  color: #333;
 }
 
 .m-link h4 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .social-icons {
-    float: right;
+  float: right;
 }
 
 h6.my-4 {
-    margin: 13px;
+  margin: 13px;
 }
 
 div#v-pills-tab a {
-    border-radius: 0;
-    color: #666;
-    font-size: 13px;
+  border-radius: 0;
+  color: #666;
+  font-size: 13px;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff !important;
-    background-color: #b92b27 !important;
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff !important;
+  background-color: #b92b27 !important;
 }
 
 .nav-pills .nav-link:hover {
-    background: #edf2f6;
+  background: #edf2f6;
 }
 
 .btn-light {
-    border-color: #dae0e5 !important;
+  border-color: #dae0e5 !important;
 }
 
 @media only screen and (min-width: 1200px) {
-    .container {
-        max-width: 1201px !important;
-    }
-    .routlet .container-fluid {
-        width: 90%;
-        margin: 0 auto;
-        margin-top: 5%;
-    
-    }
-    .notify-button{
-        border: none;
-        background: white;
-        font-size: larger;
-        margin-left: 10%;
-    }
+  .container {
+    max-width: 1201px !important;
+  }
+  .routlet .container-fluid {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 5%;
+  }
+  .notify-button {
+    border: none;
+    background: white;
+    font-size: larger;
+    margin-left: 10%;
+  }
 }
 
 @media screen and (max-width: 559px) {
-    .container-custom {
-        width: 90%;
-    }
+  .container-custom {
+    width: 90%;
+  }
 
-    ul.myul li {
-        vertical-align: middle;
-        float: left;
-    }
-    .notify-button{
-        border: none;
-        background: white;
-    }
-    .navbar-nav {
-        display: flex;
-        flex-direction: column;
-        padding-left: 0;
-        align-items: flex-start;
-        margin: auto;
-        list-style: none;
-    }
-    .nav-link {
-        display: inline-flex;
-        padding: .5rem 1rem;
-    }
-    .fa {
-        padding: 5px;
-    }
-    .create-page-button-custom-position{
-        /* position: absolute; */
-        width: 90%;
-        bottom: 50%;
-        padding: 15px 2px 15px 0px;
-    }
-    .create-page-button-custom-position button{
-        width: 100%;
-    }
+  ul.myul li {
+    vertical-align: middle;
+    float: left;
+  }
+  .notify-button {
+    border: none;
+    background: white;
+  }
+  .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    align-items: flex-start;
+    margin: auto;
+    list-style: none;
+  }
+  .nav-link {
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+  }
+  .fa {
+    padding: 5px;
+  }
+  .create-page-button-custom-position {
+    /* position: absolute; */
+    width: 90%;
+    bottom: 50%;
+    padding: 15px 2px 15px 0px;
+  }
+  .create-page-button-custom-position button {
+    width: 100%;
+  }
 }
 
-.btn-custom-horizondal{
-    width: 120px;
-    height: 40px;
+.btn-custom-horizondal {
+  width: 120px;
+  height: 40px;
 }
-.create-page-button-custom-position1{
-    text-align: center;
+.create-page-button-custom-position1 {
+  text-align: center;
 }
-
 
 .circle {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    border: 1px solid red;
-    font-size: 10px;
-    color: #fff;
-    position: absolute;
-    text-align: center;
-    background: #dc3545;
-    margin-left: -8px;
-  }
-  #share-content a{
-     color: black;
-  }
-
-  .navbar-toggler {
-    padding: none !important;
-    font-size: 16px;
-  }
-  .mobile-avatar-button{
-    border: none;
-    background-color: white;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 1px solid red;
+  font-size: 10px;
+  color: #fff;
+  position: absolute;
+  text-align: center;
+  background: #dc3545;
+  margin-left: -8px;
 }
-  .mobile-avatar-button img{
-      width: 25px;
-      height: 25px;
-  }
-  #navbar {
-      padding: 0px !important;
-  }
+#share-content a {
+  color: black;
+}
 
- 
+.navbar-toggler {
+  padding: none !important;
+  font-size: 16px;
+}
+.mobile-avatar-button {
+  border: none;
+  background-color: white;
+}
+.mobile-avatar-button img {
+  width: 25px;
+  height: 25px;
+}
+#navbar {
+  padding: 0px !important;
+}
