fixed the layout

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -99,6 +99,11 @@ a {
   overflow-x: hidden;
   /* margin: 0 auto; */
 }
+
+.topalign{
+    margin-top: 57px;
+}
+
 @media only screen and (max-width: 600px) {
   .routlet .container-fluid {
     width: 90%;
