--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
-<nav id="navbar" class="navbar navbar-light bg-light justify-content-between fixed-top">
+<!-- <nav id="navbar" class="navbar navbar-light bg-light justify-content-between fixed-top"> -->
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container-fluid">
       <a [ngClass]="{'navbar-brand mylogoLg':!isMobile , 'navbar-brand simplelogo':isMobile}" (click)="hideNav()" routerLink="/"></a>
 
