--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -30,15 +30,24 @@
             
         </li>
     </ul>
-    <div class="row post-card-footer"><a href="javascript:void(0);" [ngClass]="likeButtonCss" (click)="like($event)" class="col card-link post-footer-btn text-center post-active">
-        <i aria-hidden="true" class="ti ti-heart custom-size" style=" 
-        color: #272f46;"></i><span style="
-        color: #272f46;">Like({{likedCount}})</span>  </a>
+    <div class="row post-card-footer">
+        <!--
+        <a  class="col card-link post-footer-btn text-center" (click)="onClick()">
+            <i class="fa fa-heart" [ngClass]="{'active': isActive}"></i> <span class="col card-link post-footer-btn text-center" style="
+            color: #272f46;">Like({{likedCount}})</span>
+        </a>
+    -->
+        <a href="javascript:void(0);" [ngClass]="likeButtonCss" (click)="like($event)">
+            <i class="fa fa-heart"  [ngClass]="{'active': liked}"></i>
+            Like({{likedCount}})  
+        </a>
+
         <a class="col card-link post-footer-btn text-center" (click)="toggleCommentInput()" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><i class="ti-comment-alt custom-size" style="    
            
             color: #272f46;"></i><span style="
             color: #272f46;"> Comment({{commentsCount}}) </span> </a>
-                    <a class="col card-link post-footer-btn text-center" href="javascript:void(0);"><i class="ti-share custom-size" style="  
+
+        <a class="col card-link post-footer-btn text-center" href="javascript:void(0);"><i class="ti-share custom-size" style="  
                         
                         color: #272f46;"></i><span style="
                         color: #272f46;">Share(0)</span></a>
