--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -12,7 +12,7 @@
                       <div class="btn-group">
                         <button type="button" class="btn  btn-outline-danger" title="Sign in with Google" (click)="loginG()">
                           Sign in with
-                          <i class="fa fa-google-plus"></i>
+                          <i class="fa fa-google"></i>
                         </button>
                       </div>
                     </div>
